# cuda_mmultiply

./: .gitignore  CMakeLists.txt  CUDA_syntax_highlighting  scratch.ipynb
src/: cuda_matrix_add_scalar.cu  cuda_mmultiply  cuda_mmultiply-no_shared_mem.cu  cuda_mmultiply-quantstart.cu  cuda_mmultiply.cu  cuda_mmultiply_beforeMNIST.cu  cuda_mmultiply_fromscratch.cu  cuda_mmultiply_success.cu  get_sm.cu  seg_fault_check  seg_fault_check.cu
src/.ipynb_checkpoints/: cuda_mmultiply-checkpoint.cu
